<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/common_background"
    android:orientation="vertical"
    tools:context=".AboutUs">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="80dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="99dp"
        android:text="@string/aboutUs"
        android:textAlignment="center"
        android:textSize="50sp"
        android:textColor="@color/colorBlack" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:text="@string/AndroXr"
        android:textAlignment="center"
        android:textSize="50sp"
        android:textColor="@color/colorBlack" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dteame"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NameVinuri"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:background="@color/cardview_dark_background"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/IDvinuri"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:background="@color/cardview_dark_background" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NameNavinda"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:background="@color/cardview_dark_background" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/IDnavinda"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:background="@color/cardview_dark_background" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NameEranga"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:background="@color/cardview_dark_background" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/IDeranga"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:background="@color/cardview_dark_background" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NameHirush"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:background="@color/cardview_dark_background" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/IDhirush"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:background="@color/cardview_dark_background" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Back"
            android:background="@drawable/button_curve_2nd_navi"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>