<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AttendanceHomeActivity">

    <Button
        android:id="@+id/btn_aboutus"
        android:layout_width="104dp"
        android:layout_height="47dp"
        android:layout_marginStart="20dp"
        android:text="@string/aboutus_name"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_attendance"
        app:layout_constraintStart_toEndOf="@+id/btn_attendance" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="214dp"
        android:layout_height="74dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/lobster"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_attendance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attendance_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.295" />

    <Button
        android:id="@+id/btn_event"
        android:layout_width="104dp"
        android:layout_height="48dp"
        android:layout_marginEnd="20dp"
        android:text="@string/event_name"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_attendance"
        app:layout_constraintEnd_toStartOf="@+id/btn_attendance" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:text="@string/btn_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.305"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.402" />

    <Button
        android:id="@+id/btn_view"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:text="@string/btn_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.691"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.402" />

    <TextView
        android:id="@+id/txt_EventName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="356dp"
        android:text="@string/event_name_create"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tableId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:text="@string/table_filed_id"
        android:textColor="#070707"
        app:layout_constraintBaseline_toBaselineOf="@+id/tableName"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tableName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/table_filed_name"
        android:textColor="#020202"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tableststus"
        app:layout_constraintHorizontal_bias="0.312"
        app:layout_constraintStart_toEndOf="@+id/tableId"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.608" />

    <TextView
        android:id="@+id/tableststus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:text="@string/table_filed_status"
        android:textColor="#000000"
        app:layout_constraintBaseline_toBaselineOf="@+id/tableName"
        app:layout_constraintEnd_toEndOf="parent" />

    <TableRow
        android:id="@+id/tableView"
        android:layout_width="373dp"
        android:layout_height="190dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:background="#CDCDCD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.857" />

</androidx.constraintlayout.widget.ConstraintLayout>