<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/common_background"
    tools:context=".ViewEventActivity">

    <TextView
        android:id="@+id/logo_view9"
        android:layout_width="389dp"
        android:layout_height="233dp"
        android:background="@drawable/common_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/recBox7"
        android:layout_width="361dp"
        android:layout_height="340dp"
        android:background="@drawable/box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.897" />

    <Button
        android:id="@+id/btn_add6"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_curve_2nd_navi"
        android:text="@string/btn_add"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_attendance6" />

    <Button
        android:id="@+id/btn_attendance6"
        android:layout_width="124dp"
        android:layout_height="43dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:background="@drawable/button_curve"
        android:text="@string/attendance_name"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.295" />

    <Button
        android:id="@+id/btn_aboutus6"
        android:layout_width="124dp"
        android:layout_height="43dp"
        android:background="@drawable/button_curve"
        android:text="@string/aboutus_name"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.944"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.295" />

    <Button
        android:id="@+id/btn_event6"
        android:layout_width="124dp"
        android:layout_height="43dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_curve"
        android:text="@string/event_name"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.295" />

    <Button
        android:id="@+id/btn_option2"
        android:layout_width="32dp"
        android:layout_height="36dp"
        android:drawableTop="@drawable/ic_baseline_menu_24"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.526" />

    <TableLayout
        android:layout_width="358dp"
        android:layout_height="278dp"
        android:layout_marginTop="96dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.924"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/recBox7">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="64dp">

            <TextView
                android:id="@+id/eventName1"
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                android:text="@string/event_view_name"
                android:textColor="#000000"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/eventNameDeleteCon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_name_example"
                android:textColor="#393535"
                android:textSize="25sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/eventDate1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_view_date"
                android:textColor="#000000"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/eventDate2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_view_date_example"
                android:textColor="#393535"
                android:textSize="25sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/eventDesctiption1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_view_description"
                android:textColor="#000000"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/eventDescription2"
                android:layout_width="154dp"
                android:layout_height="54dp"
                android:text="@string/event_view_description_Example"
                android:textAlignment="gravity"
                android:textColor="#393535"
                android:textSize="25sp"
                android:textStyle="bold" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>